--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
 		"@testing-library/react": "^9.3.2",
 		"@testing-library/user-event": "^7.1.2",
 		"axios": "^0.19.2",
+		"firebase": "^7.14.5",
 		"moment": "^2.26.0",
 		"node-sass": "^4.14.1",
 		"react": "^16.13.1",
@@ -41,5 +42,5 @@
 			"last 1 safari version"
 		]
 	},
-	"proxy": "http://localhost:5556"
+	"proxy": "http://localhost:5555"
 }
